Fixed navbar overlapping in team page

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -14,6 +14,7 @@ a {
   margin: auto;
   top: 0;
   left: 0;
+  transition: background 0.3s ease-in-out;
 }
 .active {
   // background: linear-gradient(
@@ -25,9 +26,7 @@ a {
   // -webkit-backdrop-filter: blur(10px);
   background: rgb(45, 84, 139);
 
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-
-  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.45);
 }
 .menuIcon {
   display: none;
