--- a/src/pages/Team/Team.scss
+++ b/src/pages/Team/Team.scss
@@ -11,7 +11,7 @@
     font-family: "Lucida Console", "Courier New", monospace;
     text-align: center;
     position: relative;
-    margin-top: 10px;
+    margin-top: 110px;
     font-size: 3rem;
     z-index: 1;
     background: -webkit-linear-gradient(#eee, #79b1e6);
